# Flood_Susceptibility_Mapping_Kerala

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: notebook_compatible.yaml
scripts/: build_notebook_dataset.py  check_alignment.py  train_simple_3dcnn.py
src/fsm_autml/datasets/: build.py  patch_dataset.py
src/fsm_autml/io/: inventory.py  raster_stack.py
src/fsm_autml/utils/: repro.py
