[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsm-autml"
version = "0.1.0"
description = "Notebook-compatible FSM replication scaffold (GeoTIFF stack + inventory points)."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
